# astrbot-rs

./: .dockerignore  .gitignore  19de921d-e3e2-8e18-8000-000064c9dbf1_fix-compile-errors.patch  CONTRIBUTING.md  Cargo.toml  Dockerfile  GAP_ANALYSIS.md  README.md  docker-compose.yml  provider-batch-template.md  readme-docker.md  readme-providers.md  readme-tech.md  哈基米-交付说明.md
crates/astrbot-cli/: Cargo.toml
crates/astrbot-cli/src/: e2e_tests.rs  main.rs  runtime.rs
crates/astrbot-core/: Cargo.toml
crates/astrbot-core/src/: callback_crypto.rs  config.rs  context_compression.rs  errors.rs  event.rs  lib.rs  local_llm.rs  message.rs  metrics.rs  pipeline.rs  session.rs  tests.rs
crates/astrbot-core/src/access/: mod.rs
crates/astrbot-core/src/agent/: coze.rs  dashscope.rs  deerflow.rs  dify.rs  executors.rs  mod.rs  tool_loop.rs
crates/astrbot-core/src/agent/context/: compressor.rs  manager.rs  mod.rs  token_counter.rs  (+1 more)
crates/astrbot-core/src/backup/: mod.rs
crates/astrbot-core/src/computer/: booter.rs  mod.rs  tools.rs
crates/astrbot-core/src/config/: env_override.rs  hot_reload.rs  mod.rs  tests.rs
crates/astrbot-core/src/cron/: mod.rs
crates/astrbot-core/src/db/: migrate.rs  mod.rs
crates/astrbot-core/src/errors/: tests.rs
crates/astrbot-core/src/event/: mod.rs
crates/astrbot-core/src/i18n/: mod.rs
crates/astrbot-core/src/kb/: manager.rs
crates/astrbot-core/src/mcp/: mod.rs
crates/astrbot-core/src/message/: mod.rs  quote.rs  tests.rs
crates/astrbot-core/src/metrics/: aggregator.rs  mod.rs
crates/astrbot-core/src/net/: mod.rs
crates/astrbot-core/src/persona/: mod.rs
crates/astrbot-core/src/pipeline/: mod.rs  process.rs  respond.rs
crates/astrbot-core/src/platform/: mod.rs  pipeline_bridge.rs
crates/astrbot-core/src/plugin/: mod.rs  sender.rs
crates/astrbot-core/src/proactive/: mod.rs
crates/astrbot-core/src/provider/: mod.rs
crates/astrbot-core/src/rag/: document.rs  embedding.rs  embedding_provider.rs  mod.rs  rerank.rs  retriever.rs  splitter.rs  tests.rs
crates/astrbot-core/src/safety/: baidu.rs  mod.rs  tests.rs
crates/astrbot-core/src/search/: mod.rs
crates/astrbot-core/src/session/: mod.rs
crates/astrbot-core/src/sse/: mod.rs
crates/astrbot-core/src/t2i/: mod.rs
crates/astrbot-core/src/testing/: mod.rs  pipeline.rs
crates/astrbot-core/src/tools/: kb_tools.rs  mod.rs
crates/astrbot-core/src/utils/: crypto.rs  file.rs  mod.rs  tests.rs  time.rs
crates/astrbot-core/src/vector_store/: mod.rs  tests.rs
crates/astrbot-core/src/voice/: mod.rs  sender.rs  stt.rs  tts.rs
crates/astrbot-core/src/wasm/: mod.rs
crates/astrbot-core/src/webhook/: mod.rs
crates/astrbot-core/src/workflow/: mod.rs
crates/astrbot-core/tests/: e2e_basic_chat.rs
crates/astrbot-dashboard/: Cargo.toml
crates/astrbot-dashboard/dashboard/: package-lock.json  vite.config.js
crates/astrbot-dashboard/dashboard.bak/: package.json
crates/astrbot-dashboard/dashboard.bak/src/: App.vue  Chat.vue  Plugins.vue  Settings.vue
crates/astrbot-dashboard/dashboard/src/: App.vue  Chat.vue  Providers.vue  Status.vue  index.html
crates/astrbot-dashboard/src/: api.rs  app_state.rs  cron_api.rs  jwt.rs  kb_api.rs  lib.rs  log_buffer.rs  log_stream.rs  routes.rs  server.rs  sse.rs  workflow_api.rs
crates/astrbot-feishu/: Cargo.toml  README.md
crates/astrbot-feishu/examples/: feishu_bot.rs
crates/astrbot-feishu/src/: auth.rs  lib.rs  models.rs
crates/astrbot-feishu/src/calendar/: mod.rs
crates/astrbot-feishu/src/knowledge/: mod.rs
crates/astrbot-feishu/src/platform/: mod.rs
crates/astrbot-feishu/src/search/: mod.rs
crates/astrbot-feishu/tests/: integration_test.rs
crates/astrbot-persona/: Cargo.toml  DELIVERY.md
crates/astrbot-persona/src/: lib.rs  manager.rs  persona.rs  presets.rs  safety.rs
crates/astrbot-persona/tests/: integration_test.rs
crates/astrbot-platform/: Cargo.toml
crates/astrbot-platform/src/: adapter.rs  dingtalk.rs  discord.rs  framework.rs  kook.rs  lark.rs  lib.rs  line.rs  matrix.rs  mattermost.rs  misskey.rs  qq.rs  qq_official.rs  satori.rs  slack.rs  telegram.rs  tests.rs  webchat.rs  webhook.rs  wechat_personal.rs  wecom.rs  wecom_bot.rs  weixin.rs
crates/astrbot-plugin/: Cargo.toml
crates/astrbot-plugin/src/: functional.rs  hot_reload.rs  installer.rs  lib.rs  loader.rs  manager.rs  market.rs  registry.rs  star_api.rs  tests.rs
crates/astrbot-provider/: Cargo.toml
crates/astrbot-provider/src/: ai21.rs  anthropic.rs  azure.rs  baichuan.rs  baidu.rs  client.rs  cohere.rs  deepseek.rs  fireworks.rs  gemini.rs  groq.rs  kimi.rs  lib.rs  ollama.rs  openai.rs  openai_compatible.rs  openrouter.rs  perplexity.rs  registry.rs  siliconflow.rs  template.rs  tests.rs  together.rs  tts.rs  types.rs  zerooneai.rs  zhipu.rs
crates/astrbot-provider/src/sources/: ai21.rs  azure.rs  baichuan.rs  baidu.rs  claude.rs  cohere.rs  deepseek.rs  fireworks.rs  groq.rs  hunyuan.rs  hyperbolic.rs  lmstudio.rs  minimax.rs  mod.rs  moonshot.rs  ollama.rs  oneapi.rs  openai.rs  openrouter.rs  perplexity.rs  qwen.rs  siliconflow.rs  spark.rs  stepfun.rs  together.rs  volcengine.rs  xai.rs  zerooneai.rs  zhipu.rs
crates/astrbot-provider/tests/: test_openai_real.rs  test_openrouter_real.rs
crates/astrbot-security/: Cargo.toml
crates/astrbot-security/src/: lib.rs  middleware.rs  permissions.rs  sandbox.rs  token_bucket.rs  webhook.rs
crates/astrbot-security/src/audit/: log.rs
crates/astrbot-security/src/auth/: token.rs
crates/astrbot-security/src/executor/: ast_checker.rs  mod.rs
crates/astrbot-security/src/file/: upload.rs
crates/astrbot-security/src/net/: mod.rs  ssrf_guard.rs
crates/astrbot-security/src/plugin/: capability.rs
crates/astrbot-security/src/webhook/: security.rs
crates/astrbot-security/tests/: integration_test.rs
crates/astrbot-ux/: Cargo.toml
crates/astrbot-ux/src/: errors.rs  help.rs  lib.rs  onboarding.rs
crates/astrbot-ux/src/errors/: catalog.rs  formatter.rs  i18n.rs  mod.rs
crates/astrbot-ux/src/help/: mod.rs  search.rs
crates/astrbot-ux/src/onboarding/: mod.rs
(+25 files in other folders)
