[workspace]
resolver = "2"
members = [
    "crates/astrbot-core",
    "crates/astrbot-platform",
    "crates/astrbot-provider",
    "crates/astrbot-plugin",
    "crates/astrbot-dashboard",
    "crates/astrbot-cli",
    "crates/astrbot-security",
    "crates/astrbot-persona",
    "crates/astrbot-ux",
    "crates/astrbot-feishu",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["AstrBot Team <team@astrbot.rs>"]
license = "AGPL-3.0"
repository = "https://github.com/Last-emo-boy/astrbot-rs"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = "0.7"
tower = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
