[workspace]
resolver = "2"
members = [
    "crates/astrbot-core",
    "crates/astrbot-platform",
    "crates/astrbot-provider",
    "crates/astrbot-plugin",
    "crates/astrbot-dashboard",
    "crates/astrbot-cli",
    "crates/astrbot-security",
    "crates/astrbot-persona",
    "crates/astrbot-ux",
    "crates/astrbot-feishu",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["AstrBot Team <team@astrbot.rs>"]
license = "AGPL-3.0"
repository = "https://github.com/Last-emo-boy/astrbot-rs"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = "0.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "5"
futures = "0.3"
futures-util = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres"] }
notify = "6"
regex = "1"
bytes = "1"
walkdir = "2"
tar = "0.4"
zip = "0.6"
rusqlite = { version = "0.31", features = ["bundled"] }
once_cell = "1"
hmac = "0.12"
sha2 = "0.10"
ring = "0.17"
tokio-tungstenite = "0.21"
wasmi = "0.31"
hex = "0.4"
getrandom = "=0.2.15"
