[package]
name = "astrbot-cli"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
astrbot-core = { path = "../astrbot-core" }
tokio = { workspace = true }
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "astrbot"
path = "src/main.rs"
