[package]
name = "astrbot-dashboard"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
astrbot-core = { path = "../astrbot-core" }
astrbot-persona = { path = "../astrbot-persona" }
astrbot-provider = { path = "../astrbot-provider" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { version = "0.5", features = ["fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
