[package]
name = "astrbot-feishu"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["AstrBot Contributors"]
description = "Feishu (Lark) integration for AstrBot: platform adapter, knowledge base RAG, calendar, and group search"
license = "AGPL-3.0"

[dependencies]
# HTTP & async
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Crypto (for webhook verification)
sha2 = "0.10"
hex = "0.4"

# Config & env
dotenvy = "0.15"

# Logging
tracing = "0.1"

# Cache (for tokens)
dashmap = "5.5"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
wiremock = "0.6"
tracing-subscriber = "0.3"

[[example]]
name = "feishu_bot"
path = "examples/feishu_bot.rs"

[lib]
name = "astrbot_feishu"
path = "src/lib.rs"
