[package]
name = "astrbot-persona"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
astrbot-core = { path = "../astrbot-core" }
serde = { workspace = true }
serde_json = { workspace = true }
