[package]
name = "astrbot-platform"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
astrbot-core = { path = "../astrbot-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
ring = { workspace = true }
reqwest = { workspace = true }
base64 = "0.22"
aes = "0.8"
cbc = { version = "0.1", features = ["block-padding", "alloc"] }
sha1 = "0.10"
