[package]
name = "astrbot-security"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["process", "time", "sync"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
constant_time_eq = "0.3"
secrecy = "0.8"
axum = "0.7"
http = "1"
jsonwebtoken = "9"
reqwest = { version = "0.12", optional = true }
uuid = { version = "1", features = ["v4"] }
infer = "0.16"
chrono = "0.4"
thiserror = "1"
tracing = "0.1"
lazy_static = "1"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["ssrf"]
ssrf = ["reqwest"]
