[package]
name = "astrbot-ux"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.25", features = ["derive"] }
colored = { version = "2.0", optional = true }
lazy_static = "1.4"

[dev-dependencies]
# mockall = "0.12"
# tempfile = "3.10"

[features]
default = ["cli-colors"]
cli-colors = ["dep:colored"]
